--- a/css/main.scss
+++ b/css/main.scss
@@ -69,3 +69,28 @@ border-bottom:1px solid var(--bs-gray);
 }
 
 }
+
+
+
+.aws-container {
+
+    .aws-show-clear {
+
+    .aws-search-field {
+
+        font-size: 0.9rem;
+        padding-left: 1.4rem;
+        border-radius: 20px!important;
+        
+
+
+    }
+       
+    }
+}
+
+
+
+
+
+ 
