--- a/css/main.css
+++ b/css/main.css
@@ -11385,4 +11385,28 @@ fieldset:disabled .btn {
   padding-left: 1.4rem;
   border-radius: 20px !important;
 }
+
+/*main menu */
+.main-navigation {
+  font-weight: 600;
+}
+
+.main-navigation .current-menu-item {
+  background-color: #fd875c;
+}
+
+.main-navigation a {
+  color: var(--bs-white);
+  padding: 1rem 1.4rem;
+}
+
+.main-navigation a:hover {
+  background-color: #fd875c;
+}
+
+.main-navigation .menu-toggle {
+  background-color: #dd4814;
+  color: white;
+  border: none;
+}
 /*# sourceMappingURL=main.css.map */
