--- a/css/main.css
+++ b/css/main.css
@@ -8339,31 +8339,11 @@ fieldset:disabled .btn {
 }
 
 .rounded {
-  border-radius: 0.25rem !important;
-}
-
-.rounded-0 {
-  border-radius: 0 !important;
-}
-
-.rounded-1 {
-  border-radius: 0.2rem !important;
-}
-
-.rounded-2 {
-  border-radius: 0.25rem !important;
-}
-
-.rounded-3 {
-  border-radius: 0.3rem !important;
+  border-radius: 1rem !important;
 }
 
 .rounded-circle {
   border-radius: 50% !important;
-}
-
-.rounded-pill {
-  border-radius: 50rem !important;
 }
 
 .rounded-top {
@@ -11408,5 +11388,9 @@ fieldset:disabled .btn {
   background-color: #dd4814;
   color: white;
   border: none;
+}
+
+.carousel .carousel-control-prev, .carousel .carousel-control-next {
+  width: 9%;
 }
 /*# sourceMappingURL=main.css.map */
